# EVClaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROTECTION_LAYERS.md  README.md  RELEASE_CHECKLIST.md  SKILL.md  TRADING_RULES.md  Tool.md  _agi_flow_healthcheck.sh  adaptive_conviction_updater.py  adaptive_sltp.py  agi_context.py  ai_trader_db.py  atr_service.py  bootstrap.sh  candidate_pipeline.py  candle_fetcher.py  cli.py  config_env.py  constants.py  constraints.py  context_builder_v2.py  context_learning.py  context_runtime.py  conviction_backtest.py  conviction_backtest_v2.py  conviction_baskets.py  conviction_fair_compare.py  conviction_model.py  conviction_montecarlo.py  conviction_options_backtest.py  cycle_io.py  cycle_trigger.py  db_maintenance.py  decay_worker.py  (+62 more)
.github/: CODEOWNERS  pull_request_template.md
acptrade/: .env.example  .gitignore  Cargo.toml  README.md
docs/: CONFIGURATION.md  ENV_VARIABLES_FULL_REFERENCE.csv  ENV_VARIABLES_FULL_REFERENCE.md  ENV_VARIABLES_GROUPED_3SOURCE.csv  context-builder-v2-design.md  live-agent-mode.md  llm_decisions.jsonl  openclawdiary.md  signal-system-design.md  symbol_rr_learning_research.md
evclaw_rust/: .env.example  .gitignore  Cargo.toml  README.md
evclaw_rust/src/: atr.rs  config.rs  hyperliquid.rs  journal.rs  labels.rs  lib.rs  runtime.rs  state.rs  types.rs
evclaw_rust/tests/: combined_strategy.rs  signal_fixtures.rs
exchanges/: __init__.py  base.py  hyperliquid_adapter.py  lighter_adapter.py  router.py
references/: architecture.md  configuration.md  (+2 more)
(+156 files in other folders)
